--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,11 +1,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header-css">
 
+<script th:src="@{/webjars/jquery/3.0.0/jquery.min.js}"></script>
+<script src="/webjars/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+
 <link rel="stylesheet" type="text/css" href="webjars/bootstrap/5.1.3/css/bootstrap.min.css" />
 
 <link rel="stylesheet" th:href="@{/css/main.css}" href="../../css/main.css" />
 
-<title>Spring Boot Thymeleaf + Spring Security</title>
+<title>Atividades</title>
 </head>
 
 <body>
