--- a/src/main/resources/templates/error/erro.html
+++ b/src/main/resources/templates/error/erro.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header-css">
 </head>
 <body>
-	Página principal de erro
+</head>
+<body>Página principal de erro
 </body>
 </html>
