--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,9 +2,9 @@
 <head>
 </head>
 <body>
-	<div th:fragment="footer">
+	<div th:fragment="footer" class="footer fixed-bottom">
 
-		<div class="container">
+		<div class="text-center">
 
 			<footer>
 				<!-- this is footer -->
