--- a/src/main/resources/templates/logged/atividades/listagem.html
+++ b/src/main/resources/templates/logged/atividades/listagem.html
@@ -6,11 +6,10 @@
 
 <div th:replace="fragments/header :: header"></div>
 
-<div class="container">
+<div class="container text-center">
 
     <div class="starter-template">
-        <h1>Spring Boot Web Thymeleaf + Spring Security</h1>
-        <h2>Carregar as atividades vencendo para o dia</h2>
+        <h1>Carregou a listagem de Atividades</h1>
     </div>
 
 </div>
