--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,12 +4,12 @@
 </head>
 <body >
 
-	<div class="container-fluid p-6 bg-primary text-white text-center w-50 mx-auto">
+	<div class="container-fluid p-6 bg-primary text-white text-center w-25 mx-auto">
 		<form th:action="@{/login}" method="post">
 			<h1>Please Sign In</h1>
 
 			<div class="mb-3">
-				<label for="formGroupExampleInput" class="form-label">Username</label> <input type="text" class="form-control" placeholder="Username -> email" name="username" id="username">
+				<label for="formGroupExampleInput" class="form-label">Username</label> <input type="text" class="form-control" placeholder="Username -> email" name="username" id="username" value="gilson.braggion@gmail.com">
 			</div>
 			<div class="mb-3">
 				<label for="formGroupExampleInput2" class="form-label">Password</label> <input type="text" class="form-control" placeholder="Password" name="password" id="password">
