--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,18 +1,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header-css">
 
-<script th:src="@{/webjars/jquery/3.0.0/jquery.min.js}"></script>
-<script src="/webjars/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-
-<link rel="stylesheet" type="text/css" href="webjars/bootstrap/5.1.3/css/bootstrap.min.css" />
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
 <link rel="stylesheet" th:href="@{/css/main.css}" href="../../css/main.css" />
 
-<title>Atividades</title>
+<title>Rhino-Tasks</title>
 </head>
 
 <body>
-	<div th:fragment="header" >
+	<div th:fragment="header">
 		<!-- this is header -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
@@ -23,16 +20,38 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item"><a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/logout}">Logout</a></li>
-						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Ações </a>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" th:href="@{/logout}">Logout</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Ações </a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li><a class="dropdown-item" th:href="@{atividades}">Atividades</a></li>
-								<li><a class="dropdown-item" href="#">Another action</a></li>
-								<li><hr class="dropdown-divider"></li>
-								<li><a class="dropdown-item" href="#">Something else here</a></li>
-							</ul></li>
-						<li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a></li>
+								<li>
+									<a class="dropdown-item" th:href="@{atividades}">Atividades</a>
+								</li>
+								<li>
+									<a class="dropdown-item" th:href="@{tipoAtividade}">Tipos de Atividades</a>
+								</li>
+								<li>
+									<a class="dropdown-item" th:href="@{tipoAtividade/evict}">Evict Tipos de Atividades</a>
+								</li>
+								<li>
+									<a class="dropdown-item" href="#">Another action</a>
+								</li>
+								<li>
+									<hr class="dropdown-divider">
+								</li>
+								<li>
+									<a class="dropdown-item" href="#">Something else here</a>
+								</li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+						</li>
 					</ul>
 					<form class="d-flex">
 						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
