--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,9 +1,10 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header-css">
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
-<link rel="stylesheet" th:href="@{/css/main.css}" href="../../css/main.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" th:href="@{/css/main.css}" href="../../css/main.css">
 
 <title>Rhino-Tasks</title>
 </head>
@@ -13,7 +14,7 @@
 		<!-- this is header -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">Atividades</a>
+				<a class="navbar-brand" href="#">Tasks</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 					aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -30,13 +31,13 @@
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Ações </a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<li>
-									<a class="dropdown-item" th:href="@{atividades}">Atividades</a>
+									<a class="dropdown-item" th:href="@{/atividade}">Atividades</a>
 								</li>
 								<li>
-									<a class="dropdown-item" th:href="@{tipoAtividade}">Tipos de Atividades</a>
+									<a class="dropdown-item" th:href="@{/tipoAtividade}">Tipos de Atividades</a>
 								</li>
 								<li>
-									<a class="dropdown-item" th:href="@{tipoAtividade/evict}">Evict Tipos de Atividades</a>
+									<a class="dropdown-item" th:href="@{/tipoAtividade/evict}">Evict Tipos de Atividades</a>
 								</li>
 								<li>
 									<a class="dropdown-item" href="#">Another action</a>
@@ -53,10 +54,6 @@
 							<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 						</li>
 					</ul>
-					<form class="d-flex">
-						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success" type="submit">Search</button>
-					</form>
 				</div>
 			</div>
 		</nav>
