--- a/src/main/resources/templates/logged/tipoAtividade/cadastro.html
+++ b/src/main/resources/templates/logged/tipoAtividade/cadastro.html
@@ -6,13 +6,13 @@
 
 	<div th:replace="fragments/header :: header"></div>
 
-	<div class="container text-center">
+	<div class="starter-template text-center">
+		<h3>
+			Tipo Atividade <a th:href="@{/tipoAtividade}"><i class="fa fa-list" aria-hidden="true"></i></a>
+		</h3>
+	</div>
 
-		<div class="starter-template">
-			<h1>
-				Cadastrar Banco <a th:href="@{/tipoAtividade}"><i class="fa fa-list" aria-hidden="true"></i></a>
-			</h1>
-		</div>
+	<div class="container-fluid">
 
 		<form method="POST" th:object="${tipoAtividade}" class="form-vertical  js-form-loading" th:action="@{/tipoAtividade/salvar}">
 			<input type="hidden" th:field="*{id}" />
@@ -27,14 +27,16 @@
 					<input type="text" th:field="*{nome}" class="form-control" autofocus="autofocus" />
 				</div>
 
-				<div class="col-sm-5  form-group">
+				<div class="col-sm-7  form-group">
 					<label>Observações</label>
 					<input type="text" th:field="*{observacoes}" class="form-control" />
 				</div>
 			</div>
 
-			<div class="form-group">
-				<button class="btn  btn-primary" type="submit">Salvar</button>
+			<div class="row">
+				<div class="form-group text-center">
+					<button class="btn  btn-primary" type="submit">Salvar</button>
+				</div>
 			</div>
 
 		</form>
