--- a/src/main/resources/templates/logged/tipoAtividade/listagem.html
+++ b/src/main/resources/templates/logged/tipoAtividade/listagem.html
@@ -6,15 +6,14 @@
 
 	<div th:replace="fragments/header :: header"></div>
 
+	<div class="starter-template text-center">
+		<h3>
+			Tipos de Atividades <a th:href="@{/tipoAtividade/novo}"><i class="fa fa-plus-square-o" aria-hidden="true"></i></a>
+		</h3>
+	</div>
 
+	<div class="container-fluid">
 
-<div class="container text-center">
-
-		<div class="starter-template">
-			<h1>
-				Listagem de Tipos de Atividades <a th:href="@{/tipoAtividade/novo}"><i class="fa fa-plus-square-o" aria-hidden="true"></i></a>
-			</h1>
-		</div>
 
 		<table class="table table-responsive table-bordered table-striped">
 			<thead>
@@ -29,8 +28,8 @@
 					<td th:utext="${item.nome}"></td>
 					<td th:utext="${item.observacoes}"></td>
 					<td class="text-center">
-						<a th:href="@{/tipoAtividade/editar} +'?idTipoAtividade=' +${item.id}"> <i class="fa fa-pencil" style="padding-right: 10px;"></i></a> 
-						<a th:href="@{/tipoAtividade/remover} +'?idTipoAtividade=' +${item.id}"> <i class="fa fa-remove"></i></a>
+						<a th:href="@{/tipoAtividade/editar} +'?idTipoAtividade=' +${item.id}"> <i class="fa fa-pencil" style="padding-right: 10px;"></i></a> <a
+							th:href="@{/tipoAtividade/remover} +'?idTipoAtividade=' +${item.id}"> <i class="fa fa-remove"></i></a>
 					</td>
 				</tr>
 			</tbody>
