--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,13 +37,10 @@
 									<a class="dropdown-item" th:href="@{/tipoAtividade}">Tipos de Atividades</a>
 								</li>
 								<li>
-									<a class="dropdown-item" th:href="@{/tipoAtividade/evict}">Evict Tipos de Atividades</a>
-								</li>
-								<li>
 									<a class="dropdown-item" href="#">Another action</a>
 								</li>
 								<li>
-									<hr class="dropdown-divider">
+									<hr class="dropdown-divider" />
 								</li>
 								<li>
 									<a class="dropdown-item" href="#">Something else here</a>
