--- a/src/main/resources/templates/logged/atividade/listagem.html
+++ b/src/main/resources/templates/logged/atividade/listagem.html
@@ -8,7 +8,7 @@
 
 	<div class="starter-template text-center">
 		<h3>
-			Atividades <a th:href="@{/atividade/novo}"><i class="fa fa-plus-square-o" aria-hidden="true"></i></a>
+			Atividades <th:block th:if="${tipoAtividade}"> <th:block th:utext="${tipoAtividade.nome}"> </th:block>  <a th:href="@{/tipoAtividade/}"> <i class="fa fa-arrow-left" aria-hidden="true"></i></a> </th:block>  <a th:if="${tipoAtividade == null}" th:href="@{/atividade/novo}"> <i class="fa fa-plus-square-o" aria-hidden="true"></i></a>
 		</h3>
 	</div>
 
