--- a/src/main/resources/templates/logged/tipoAtividade/listagem.html
+++ b/src/main/resources/templates/logged/tipoAtividade/listagem.html
@@ -28,8 +28,9 @@
 					<td th:utext="${item.nome}"></td>
 					<td th:utext="${item.observacoes}"></td>
 					<td class="text-center">
-						<a th:href="@{/tipoAtividade/editar} +'?idTipoAtividade=' +${item.id}"> <i class="fa fa-pencil" style="padding-right: 10px;"></i></a> <a
-							th:href="@{/tipoAtividade/remover} +'?idTipoAtividade=' +${item.id}"> <i class="fa fa-remove"></i></a>
+						<a th:href="@{/tipoAtividade/editar} +'?idTipoAtividade=' +${item.id}"> <i class="fa fa-pencil" style="padding-right: 10px;"></i></a> 
+						<a th:href="@{/tipoAtividade/remover} +'?idTipoAtividade=' +${item.id}"> <i class="fa fa-remove" style="padding-right: 10px;"></i></a>
+						<a th:href="@{/tipoAtividade/filtrar} +'?idTipoAtividade=' +${item.id}"> <i class="fa fa-list"></i></a>
 					</td>
 				</tr>
 			</tbody>
