--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,14 +25,11 @@
 							<a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" th:href="@{/logout}">Logout</a>
+							<a class="nav-link" th:href="@{/atividade}">Atividades</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Ações </a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li>
-									<a class="dropdown-item" th:href="@{/atividade}">Atividades</a>
-								</li>
 								<li>
 									<a class="dropdown-item" th:href="@{/tipoAtividade}">Tipos de Atividades</a>
 								</li>
@@ -48,7 +45,7 @@
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+							<a class="nav-link" th:href="@{/logout}">Logout</a>
 						</li>
 					</ul>
 				</div>
