--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,28 +2,28 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header-css">
 </head>
-<body >
+<body style="background: linear-gradient(to bottom right, cyan, white); background-attachment: fixed;">
 
-	<div class="container-fluid p-6 bg-primary text-white text-center w-25 mx-auto">
+	<div class="container-fluid p-6 bg-primary text-white text-center w-25 mx-auto" style="margin-top: 100px">
 		<form th:action="@{/login}" method="post">
-			<h1>Please Sign In</h1>
+			<h1>Autenticação</h1>
 
 			<div class="mb-3">
-				<label for="formGroupExampleInput" class="form-label">Username</label> <input type="text" class="form-control" placeholder="Username -> email" name="username" id="username" value="gilson.braggion@gmail.com">
+				<label for="formGroupExampleInput" class="form-label">E-mail</label> <input type="text" class="form-control" placeholder="E-mail" name="username" id="username" value="gilson.braggion@gmail.com">
 			</div>
 			<div class="mb-3">
-				<label for="formGroupExampleInput2" class="form-label">Password</label> <input type="text" class="form-control" placeholder="Password" name="password" id="password">
+				<label for="formGroupExampleInput2" class="form-label">Senha</label> <input type="text" class="form-control" placeholder="Senha" name="password" id="password">
 			</div>
 
 			<div th:if="${param.error}">
-				<div class="alert alert-danger">Invalid username and password.</div>
+				<div class="alert alert-danger">Usuário ou senha inválidos.</div>
 			</div>
 			<div th:if="${param.logout}">
-				<div class="alert alert-info">You have been logged out.</div>
+				<div class="alert alert-info">Logout realizado.</div>
 			</div>
 
 			<div class="mb-3">
-				<button type="submit" class="btn btn-primary">Sign in</button>
+				<button type="submit" class="btn btn-primary">Entrar</button>
 			</div>
 		</form>
 	</div>
