--- a/src/main/resources/templates/logged/atividade/cadastro.html
+++ b/src/main/resources/templates/logged/atividade/cadastro.html
@@ -8,7 +8,7 @@
 
 	<div class="starter-template text-center">
 		<h3>
-			Tipo Atividade <a th:href="@{/atividade}"><i class="fa fa-list" aria-hidden="true"></i></a>
+			Atividade <a th:href="@{/atividade}"><i class="fa fa-list" aria-hidden="true"></i></a>
 		</h3>
 	</div>
 
@@ -16,18 +16,28 @@
 
 		<form method="POST" th:object="${atividade}" class="form-vertical  js-form-loading" th:action="@{/atividade/salvar}">
 			<input type="hidden" th:field="*{id}" />
+			<input type="hidden" th:field="*{fromHome}" />
 
 			<div class="alert alert-danger text-center" role="alert" th:if="${mensagem}">
 				<span th:utext="${mensagem}"></span>
 			</div>
 
 			<div class="row">
-				<div class="col-sm-4 form-group">
+			
+				<div class="col-sm-6 form-group">
 					<label>Texto</label>
-					<input type="text" th:field="*{texto}" class="form-control" autofocus="autofocus" />
+					<textarea th:field="*{texto}" class="form-control" autofocus="autofocus" rows="3" ></textarea>
 				</div>
+			
+				<div class="col-sm-6 form-group">
+					<label>Observações</label>
+					<textarea th:field="*{observacoes}" class="form-control" rows="3" ></textarea>
+				</div>
+			</div>
 
-				<div class="col-sm-2 form-group">
+
+			<div class="row">
+				<div class="col-sm-4 form-group">
 					<label>Envolvidos</label>
 					<input type="text" th:field="*{envolvidos}" class="form-control" />
 				</div>
@@ -37,7 +47,6 @@
 					<select class="form-select" name="idTipoAtividade">
 						<option th:each="item : ${listagemTipo}" th:label="${item.nome}" th:value="${item.id}" th:selected="${item.id == atividade.tipoAtividade?.id}" />
 					</select>
-
 				</div>
 
 				<div class="col-sm-2 form-group">
@@ -46,15 +55,17 @@
 				</div>
 
 				<div class="col-sm-2 form-group">
-					<label>Data finalizacao</label>
+					<label>Data finalização</label>
 					<input type="text" th:field="*{{dataFinalizacao}}" class="form-control datepicker" />
 				</div>
-			</div>
 
-			<div class="row">
-				<div class="col-sm-12 form-group">
-					<label>Observações</label>
-					<input type="text" th:field="*{observacoes}" class="form-control" />
+				<div class="col-sm-2 form-group">
+					<label>Finalizado</label>
+					<select class="form-select" name="finalizado">
+						<option value="false" >Não</option>
+						<option value="true"  th:selected="*{finalizado}">Sim</option>
+					</select>
+
 				</div>
 			</div>
 
