--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,10 +9,12 @@
 			<h1>Autenticação</h1>
 
 			<div class="mb-3">
-				<label for="formGroupExampleInput" class="form-label">E-mail</label> <input type="text" class="form-control" placeholder="E-mail" name="username" id="username" value="gilson.braggion@gmail.com">
+				<label for="formGroupExampleInput" class="form-label">E-mail</label>
+				<input type="text" class="form-control" placeholder="E-mail" name="username" id="username" value="gilson.braggion@gmail.com">
 			</div>
 			<div class="mb-3">
-				<label for="formGroupExampleInput2" class="form-label">Senha</label> <input type="text" class="form-control" placeholder="Senha" name="password" id="password">
+				<label for="formGroupExampleInput2" class="form-label">Senha</label>
+				<input type="password" class="form-control" placeholder="Senha" name="password" id="password" autofocus="autofocus">
 			</div>
 
 			<div th:if="${param.error}">
