--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,13 +25,13 @@
 							<a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="dropdown-item" th:href="@{/tipoAtividade}">Tipos de Atividades</a>
+							<a class="nav-link" th:href="@{/tipoAtividade}">Tipos de Atividades</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Ações </a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<li>
-									<a class="nav-link" th:href="@{/atividade}">Atividades</a>
+									<a class="dropdown-item" th:href="@{/atividade}">Atividades</a>
 								</li>
 								<li>
 									<a class="dropdown-item" href="#">Another action</a>
