--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,7 +8,7 @@
 
 			<footer>
 				<!-- this is footer -->
-				&copy; 2022 Gilson Braggion <span sec:authorize="isAuthenticated()"> | Logged username: <span sec:authentication="name"></span> | Roles: <span sec:authentication="principal.authorities"></span>
+				<span sec:authorize="isAuthenticated()"> Logged username: <span sec:authentication="name"></span> | Roles: <span sec:authentication="principal.authorities"></span>
 				</span>
 				
 				<span sec:authorize="!isAuthenticated()"> | User not authenticated yet!
