--- a/src/main/resources/templates/logged/oneOnOne/cadastro.html
+++ b/src/main/resources/templates/logged/oneOnOne/cadastro.html
@@ -80,7 +80,7 @@
 
 			<div class="row">
 				<div class="form-group text-center">
-					<button class="btn  btn-primary" type="submit">Salvar</button>
+					<button class="btn  btn-primary littleTopSpace" type="submit">Salvar</button>
 				</div>
 			</div>
 
