Filtro por datas no one on one

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -39,7 +39,7 @@
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> One on One </a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<li>
-									<a class="dropdown-item" th:href="@{/oneOnOne}">Listagem</a>
+									<a class="dropdown-item" th:href="@{/oneOnOne/naoRealizados}">Listagem</a>
 								</li>
 								<li>
 									<a class="dropdown-item" th:href="@{/oneOnOne/datas}">Filtro por data</a>
