--- a/src/main/resources/templates/logged/oneOnOne/listagem.html
+++ b/src/main/resources/templates/logged/oneOnOne/listagem.html
@@ -9,7 +9,7 @@
 	<div class="starter-template text-center">
 	<div class="starter-template text-center">
 		<h3>
-			One on One <a th:href="@{/oneOnOne/novo}"><i class="fa fa-plus-square-o" aria-hidden="true"></i></a>
+			One on One <a th:href="@{/oneOnOne/novo}"><i class="fa fa-plus-square-o" aria-hidden="true"></i></a> <a th:href="@{/oneOnOne}"><i class="fa fa-list" aria-hidden="true"></i></a>
 		</h3>
 	</div>
 	</div>
