Filtro por datas no one on one

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -51,3 +51,9 @@ h3 {
 .accordion-button{
     display:block;
 }
+
+.headerFixo {
+	background-color: graytext;
+	color: white;
+	position: sticky; top: 0
+}
