--- a/src/main/resources/templates/logged/oneOnOne/datas.html
+++ b/src/main/resources/templates/logged/oneOnOne/datas.html
@@ -36,7 +36,7 @@
 
 		<div class="topSpace" th:if="${listagem}">
 			<table class="table table-responsive table-bordered table-striped">
-				<thead>
+				<thead class="headerFixo">
 					<tr>
 						<th class="col-sm-1">Data</th>
 						<th class="col-sm-1">Hora Inicio</th>
