--- a/src/main/resources/templates/logged/atividade/listagem.html
+++ b/src/main/resources/templates/logged/atividade/listagem.html
@@ -15,7 +15,7 @@
 	<div class="container-fluid">
 
 		<table class="table table-responsive table-bordered table-striped">
-			<thead>
+			<thead class="headerFixo">
 				<tr>
 					<th class="col-sm-2">Texto</th>
 					<th class="col-sm-1">Envolvidos</th>
