--- a/src/main/resources/templates/logged/oneOnOne/listagem.html
+++ b/src/main/resources/templates/logged/oneOnOne/listagem.html
@@ -17,7 +17,7 @@
 	<div class="container-fluid">
 
 		<table class="table table-responsive table-bordered table-striped">
-			<thead>
+			<thead class="headerFixo">
 				<tr>
 					<th class="col-sm-1">Data</th>
 					<th class="col-sm-1">Hora Inicio</th>
