--- a/src/main/resources/templates/logged/tipoAtividade/listagem.html
+++ b/src/main/resources/templates/logged/tipoAtividade/listagem.html
@@ -16,7 +16,7 @@
 
 
 		<table class="table table-responsive table-bordered table-striped">
-			<thead>
+			<thead class="headerFixo">
 				<tr>
 					<th class="col-sm-5">Nome</th>
 					<th class="col-sm-5">Observações</th>
