--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,19 +8,24 @@
 
 			<footer>
 				<!-- this is footer -->
-				<span sec:authorize="isAuthenticated()"> Logged username: <span sec:authentication="name"></span> | Roles: <span sec:authentication="principal.authorities"></span>
-				</span>
-				
-				<span sec:authorize="!isAuthenticated()"> | User not authenticated yet!
+				<th:block th:text="|Usuário: ${session.USUARIO_LOGGED.userName}|" />
+				|
+				<span sec:authorize="isAuthenticated()">
+					Email:
+					<span sec:authentication="name"></span>
+					| Roles:
+					<span sec:authentication="principal.authorities"></span>
 				</span>
 
-				<script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
+				<span sec:authorize="!isAuthenticated()"> | User not authenticated yet! </span>
+
+				<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 				<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-				<script th:src="@{/js/jquery.mask.js}" ></script>
-				<script th:src="@{/js/main.js}" ></script>
-				
+				<script th:src="@{/js/jquery.mask.js}"></script>
+				<script th:src="@{/js/main.js}"></script>
+
 
 			</footer>
 		</div>
