--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -67,7 +67,7 @@
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" th:href="@{/liderado}">Liderados</a>
+							<a class="nav-link" aria-current="page" th:href="@{/liderado}">Liderados</a>
 						</li>
 
 						<li class="nav-item">
