Criação de Atividades de Projetos

--- a/src/main/resources/templates/logged/atividade/cadastro.html
+++ b/src/main/resources/templates/logged/atividade/cadastro.html
@@ -51,12 +51,12 @@
 
 				<div class="col-sm-2 form-group">
 					<label>Data execução </label>
-					<input type="text" th:field="*{{dataExecucao}}" class="form-control datepicker" />
+					<input type="text" th:field="*{{dataExecucao}}" class="form-control datepicker" autocomplete="off"/>
 				</div>
 
 				<div class="col-sm-2 form-group">
 					<label>Data finalização</label>
-					<input type="text" th:field="*{{dataFinalizacao}}" class="form-control datepicker" />
+					<input type="text" th:field="*{{dataFinalizacao}}" class="form-control datepicker" autocomplete="off"/>
 				</div>
 
 				<div class="col-sm-2 form-group">
