--- a/src/main/resources/templates/logged/oneOnOne/cadastro.html
+++ b/src/main/resources/templates/logged/oneOnOne/cadastro.html
@@ -24,7 +24,7 @@
 			<div class="row">
 				<div class="col-sm-4 form-group">
 					<label>Data</label>
-					<input type="text" th:field="*{{data}}" class="form-control datepicker" />
+					<input type="text" th:field="*{{data}}" class="form-control datepicker" autocomplete="off" />
 				</div>
 			
 				<div class="col-sm-2 form-group">
