Ajuste filtro atividades

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -79,6 +79,9 @@
 									<a class="dropdown-item" th:href="@{/atividadeSubProjeto}">Atividades Projeto</a>
 								</li>
 								<li>
+									<a class="dropdown-item" th:href="@{/grafico/resumoAtividadeSubProjeto}">Resumo Atividades</a>
+								</li>
+								<li>
 									<hr class="dropdown-divider" />
 								</li>
 								<li>
