--- a/src/main/resources/templates/logged/atividadeSubProjeto/resumo.html
+++ b/src/main/resources/templates/logged/atividadeSubProjeto/resumo.html
@@ -13,7 +13,7 @@
 		<form th:action="@{/grafico/buscarResumoAtividadeSubProjeto}" th:method="POST" class="form">
 
 			<div class="row">
-				<div class="col-sm-3  form-group">
+				<div class="col-sm-3 col-md-4 form-group">
 					<label for="mes">Sub Projetos</label>
 					<select class="form-select" name="idSubProjeto">
 						<option label="Selecione..." value="" />
