Inclusão de controle por usuários

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 
 			<div class="mb-3">
 				<label for="formGroupExampleInput" class="form-label">E-mail</label>
-				<input type="text" class="form-control" placeholder="E-mail" name="username" id="username" value="gilson.braggion@gmail.com">
+				<input type="text" class="form-control" placeholder="E-mail" name="username" id="username">
 			</div>
 			<div class="mb-3">
 				<label for="formGroupExampleInput2" class="form-label">Senha</label>
