--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -89,6 +89,29 @@
 								</li>
 							</ul>
 						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Administração </a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li>
+									<a class="dropdown-item" th:href="@{/administracao}">Administrar</a>
+								</li>
+								<li>
+									<a class="dropdown-item" th:href="@{/subProjeto}">Sub Projeto</a>
+								</li>
+								<li>
+									<a class="dropdown-item" th:href="@{/atividadeSubProjeto}">Atividades Projeto</a>
+								</li>
+								<li>
+									<a class="dropdown-item" th:href="@{/grafico/resumoAtividadeSubProjeto}">Resumo Atividades</a>
+								</li>
+								<li>
+									<hr class="dropdown-divider" />
+								</li>
+								<li>
+									<a class="dropdown-item" href="#">Divisor</a>
+								</li>
+							</ul>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link" aria-current="page" th:href="@{/liderado}">Liderados</a>
 						</li>
