--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,11 +10,11 @@
 
 			<div class="mb-3">
 				<label for="formGroupExampleInput" class="form-label">E-mail</label>
-				<input type="text" class="form-control" placeholder="E-mail" name="username" id="username">
+				<input type="text" class="form-control" placeholder="E-mail" name="username" id="username" autofocus="autofocus">
 			</div>
 			<div class="mb-3">
 				<label for="formGroupExampleInput2" class="form-label">Senha</label>
-				<input type="password" class="form-control" placeholder="Senha" name="password" id="password" autofocus="autofocus">
+				<input type="password" class="form-control" placeholder="Senha" name="password" id="password" >
 			</div>
 
 			<div th:if="${param.error}">
