--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -44,26 +44,6 @@
 								<li>
 									<a class="dropdown-item" th:href="@{/oneOnOne/liderado}">Filtro por Liderado</a>
 								</li>
-								<li>
-									<hr class="dropdown-divider" />
-								</li>
-								<li>
-									<a class="dropdown-item" href="#">Divisor</a>
-								</li>
-							</ul>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Reuniões </a>
-							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li>
-									<a class="dropdown-item" th:href="@{/reuniao}">Listagem</a>
-								</li>
-								<li>
-									<hr class="dropdown-divider" />
-								</li>
-								<li>
-									<a class="dropdown-item" href="#">Divisor</a>
-								</li>
 							</ul>
 						</li>
 						<li class="nav-item dropdown">
@@ -81,37 +61,15 @@
 								<li>
 									<a class="dropdown-item" th:href="@{/grafico/resumoAtividadeSubProjeto}">Resumo Atividades</a>
 								</li>
-								<li>
-									<hr class="dropdown-divider" />
-								</li>
-								<li>
-									<a class="dropdown-item" href="#">Divisor</a>
-								</li>
 							</ul>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Administração </a>
-							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li>
-									<a class="dropdown-item" th:href="@{/administracao}">Administrar</a>
-								</li>
-								<li>
-									<a class="dropdown-item" th:href="@{/subProjeto}">Sub Projeto</a>
-								</li>
-								<li>
-									<a class="dropdown-item" th:href="@{/atividadeSubProjeto}">Atividades Projeto</a>
-								</li>
-								<li>
-									<a class="dropdown-item" th:href="@{/grafico/resumoAtividadeSubProjeto}">Resumo Atividades</a>
-								</li>
-								<li>
-									<hr class="dropdown-divider" />
-								</li>
-								<li>
-									<a class="dropdown-item" href="#">Divisor</a>
-								</li>
-							</ul>
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" th:href="@{/administracao}">Administrar</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" th:href="@{/reuniao}">Reuniões</a>
+						</li>
+
 						<li class="nav-item">
 							<a class="nav-link" aria-current="page" th:href="@{/liderado}">Liderados</a>
 						</li>
