--- a/src/main/resources/templates/logged/subProjeto/listagem.html
+++ b/src/main/resources/templates/logged/subProjeto/listagem.html
@@ -7,11 +7,11 @@
 	<div th:replace="fragments/header :: header"></div>
 
 	<div class="starter-template text-center">
-	<div class="starter-template text-center">
-		<h3>
-			Sub Projeto <a th:href="@{/subProjeto/novo}"><i class="fa fa-plus-square-o" aria-hidden="true"></i></a> <a th:href="@{/subProjeto}"><i class="fa fa-list" aria-hidden="true"></i></a>
-		</h3>
-	</div>
+		<div class="starter-template text-center">
+			<h3>
+				Sub Projeto <a th:href="@{/subProjeto/novo}"><i class="fa fa-plus-square-o" aria-hidden="true"></i></a> <a th:href="@{/subProjeto}"><i class="fa fa-list" aria-hidden="true"></i></a>
+			</h3>
+		</div>
 	</div>
 
 	<div class="container-fluid">
@@ -21,7 +21,7 @@
 				<tr>
 					<th class="col-sm-2">Projeto</th>
 					<th class="col-sm-2">Nome sub projeto</th>
-					<th class="col-sm-1">Data inicio</th>
+					<th class="col-sm-1">Data início</th>
 					<th class="col-sm-1">Data fim</th>
 					<th class="col-sm-1">Responsável</th>
 					<th class="col-sm-2">Observações</th>
@@ -31,8 +31,13 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="item : ${listagem}" >
-					<td th:utext="${item.projeto.nomeProjeto}"></td>
+				<tr th:each="item : ${listagem}">
+					<td >
+						<span th:utext="${item.projeto.nomeProjeto}"></span>
+						<span th:if="${item.idUsuario != idUsuarioLogado}">
+							<i class="fa fa-share-alt" aria-hidden="true"></i>
+						</span>
+					</td>
 					<td th:utext="${item.nomeSubProjeto}"></td>
 					<td th:utext="${{item.dataInicio}}"></td>
 					<td th:utext="${{item.dataFim}}"></td>
@@ -41,9 +46,9 @@
 					<td th:utext="${item.finalizado} ? 'Sim' : 'Não'"></td>
 					<td th:utext="${item.atrasado} ? 'Sim' : 'Não'"></td>
 					<td class="text-center">
-						<a th:if="${!item.finalizado}" th:href="@{/subProjeto/editar} +'?idSubProjeto=' +${item.id}"> <i class="fa fa-pencil" style="padding-right: 10px;"></i></a> 
-						<a th:if="${!item.finalizado}" th:href="@{/subProjeto/remover} +'?idSubProjeto=' +${item.id}"> <i class="fa fa-remove" style="padding-right: 10px;"></i></a>
-						<a th:href="@{/atividadeSubProjeto/listaBySub} +'?idSubProjeto=' +${item.id}"> <i class="fa fa-list"></i></a>
+						<a th:if="${!item.finalizado}" th:href="@{/subProjeto/editar} +'?idSubProjeto=' +${item.id}"> <i class="fa fa-pencil" style="padding-right: 10px;"></i></a> <a th:if="${!item.finalizado}"
+							th:href="@{/subProjeto/remover} +'?idSubProjeto=' +${item.id}"> <i class="fa fa-remove" style="padding-right: 10px;"></i></a> <a
+							th:href="@{/atividadeSubProjeto/listaBySub} +'?idSubProjeto=' +${item.id}"> <i class="fa fa-list"></i></a>
 					</td>
 				</tr>
 			</tbody>
