Inclusao de ordenacao e busca

--- a/src/main/resources/templates/logged/subProjeto/listagem.html
+++ b/src/main/resources/templates/logged/subProjeto/listagem.html
@@ -16,7 +16,7 @@
 
 	<div class="container-fluid">
 
-		<table class="table table-responsive table-bordered table-striped">
+		<table class="table table-responsive table-bordered table-striped tabelaFiltro">
 			<thead class="headerFixo">
 				<tr>
 					<th class="col-sm-2">Projeto</th>
