--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -23,6 +23,7 @@
 				<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
+				<script src="https:////cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
 				<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 				<script th:src="@{/js/jquery.mask.js}"></script>
 				<script th:src="@{/js/jquery.maskMoney.min.js}"></script>
