--- a/src/main/resources/templates/logged/administracao/listagem.html
+++ b/src/main/resources/templates/logged/administracao/listagem.html
@@ -13,7 +13,7 @@
 	<div class="container-fluid">
 
 
-		<table class="table table-responsive table-bordered table-striped">
+		<table class="table table-responsive table-bordered table-striped tabelaFiltro">
 			<thead class="headerFixo">
 				<tr>
 					<th class="col-sm-1">Nome proprietário</th>
@@ -38,7 +38,7 @@
 		<form th:action="@{/administracao/compartilhar}" th:method="POST" class="form">
 
 			<div class="card">
-				<div class="card-header" style="font-weight: bold; color: white;">Compartilhar Sub Projetos</div>
+				<div class="card-header" style="font-weight: bold; color: rgb(255, 255, 255);">Compartilhar Sub Projetos</div>
 				<div class="card-body">
 					<div class="row">
 						<div class="col-sm-3 form-group">
