--- a/src/main/resources/templates/logged/atividade/listagem.html
+++ b/src/main/resources/templates/logged/atividade/listagem.html
@@ -14,7 +14,7 @@
 
 	<div class="container-fluid">
 
-		<table class="table table-responsive table-bordered table-striped">
+		<table class="table table-responsive table-bordered table-striped tabelaFiltro">
 			<thead class="headerFixo">
 				<tr>
 					<th class="col-sm-2">Texto</th>
