--- a/src/main/resources/templates/logged/liderado/listagem.html
+++ b/src/main/resources/templates/logged/liderado/listagem.html
@@ -15,7 +15,7 @@
 	<div class="container-fluid">
 
 
-		<table class="table table-responsive table-bordered table-striped">
+		<table class="table table-responsive table-bordered table-striped tabelaFiltro">
 			<thead class="headerFixo">
 				<tr>
 					<th class="col-sm-4">Nome</th>
